<resources>
    <string name="app_name">FunZ</string>
    <string name="welcome_base">&#161;Hola!</string>
    <string name="welcome_format">&#161;Hola, %1$s!</string>
    <string name="streak_format">&#128293; Racha: %1$d d&#237;as</string>
    <string name="streak_default">&#128293; Racha: 0 d&#237;as</string>
    <string name="resume_default">M&#243;dulo 1 · Ej. 1 de 3</string>
    <string name="btn_resume">&#9654; Reanudar</string>
    <string name="label_continue">CONTINUAR</string>
    <string name="label_quick_access">ACCESO R&#193;PIDO</string>
    <string name="qa_temas">Temas</string>
    <string name="qa_salas">Salas</string>
    <string name="qa_stats">Estad&#237;sticas</string>
    <string name="qa_config">Configuraci&#243;n</string>
    <string name="titulo_modulos">M&#243;dulos</string>
    <string name="modulo">M&#243;dulo</string>
    <string name="label_practice">Pr&#225;ctica</string>
    <string name="loading">Cargando&#8230;</string>
    <string name="_0">0%</string>
    <string name="medal_bronze">&#129353;</string>
    <string name="medal_fire">&#128293;</string>
    <string name="medal_grad">&#127891;</string>
    <string name="exercise_title_1">Ejercicio 1 de 3</string>
    <string name="exercise_title_2">Ejercicio 2 de 3</string>
    <string name="exercise_title_3">Ejercicio 3 de 3</string>
    <string name="btn_verify">Verificar</string>
    <string name="btn_hint">&#128161;</string>
    <string name="btn_hamburger">&#8801;</string>
    <string name="btn_exit">&#10005;</string>
    <string name="load_hint">Pista cargando&#8230;</string>
    <string name="eq_balanza">x + 5 = 10</string>
    <string name="eq_clasico">3x + 5 = 20</string>
    <string name="eq_tiles">x + 2 = 12</string>
    <string name="result_correct">&#127881; &#161;Correcto!</string>
    <string name="result_incorrect">&#129300; Incorrecto</string>
    <string name="result_timeout">&#9200; &#161;Tiempo agotado!</string>
    <string name="result_pts_format">&#161;Bien hecho! +%1$d puntos.</string>
    <string name="result_hint_msg">Usaste una pista. &#161;Intenta sin pista para +50 extra!</string>
    <string name="result_incorrect_msg">Revisa la secci&#243;n de Informaci&#243;n antes de reintentar.</string>
    <string name="title_salas">Salas de Juego</string>
    <string name="coming_soon">&#161;Pr&#243;ximamente!</string>
    <string name="salas_coming_soon_desc">La secci&#243;n de Salas (Colaborativo y Competitivo) estar&#225; disponible en la pr&#243;xima versi&#243;n de FunZ.\n\n&#161;Sigue practicando los m&#243;dulos para estar listo!</string>
    <string name="ic_rocket">&#128640;</string>
    <string name="config_save">Guardar cambios</string>
    <string name="config_saved">&#10003; Cambios guardados</string>
    <string name="theme_light">&#9728;&#65039; Claro</string>
    <string name="theme_dark">&#127769; Oscuro</string>
    <string name="title_config">Configuraci&#243;n</string>
    <string name="label_username">NOMBRE DE USUARIO</string>
    <string name="label_hint">Escribe tu nombre</string>
    <string name="label_theme">TEMA</string>
    <string name="label_haptic_feedback">VIBRACION</string>
    <string name="haptic_on">Activada</string>
    <string name="haptic_off">Desactivada</string>
    <string name="label_audio_feedback">SONIDO</string>
    <string name="audio_on">Activada</string>
    <string name="audio_off">Desactivada</string>
    <string name="label_credits">CR&#201;DITOS</string>
    <string name="app_version_info">FunZ v4.0 &#183; UNAM 2026</string>
    <string name="dev_name_1">Ch&#225;vez Mart&#237;nez Marco Antonio</string>
    <string name="dev_name_2">Cano Tenorio Alan Kevin</string>
    <string name="dev_name_3">Escobedo Irineo Malinalli</string>
    <string name="team_info">Innovaci&#243;n Android &#183; UNAM 2026</string>
    <string name="mod1_name">M&#243;dulo 1: Introducci&#243;n</string>
    <string name="mod1_sub">x+a=b · 3 m&#233;todos</string>
    <string name="mod2_name">M&#243;dulo 2: Coeficientes</string>
    <string name="mod2_sub">ax+b=c · Balanza</string>
    <string name="mod3_name">M&#243;dulo 3: Par&#233;ntesis</string>
    <string name="mod3_sub">a(x+b)=c(x+d)</string>
    <string name="ejemplo">Ejemplo A</string>
    <string name="title_stats">Estad&#237;sticas</string>
    <string name="stat_points">Puntos</string>
    <string name="stat_total_progress">Progreso Total</string>
    <string name="stat_streak">Racha (d&#237;as)</string>
    <string name="stat_resolved">Resueltos</string>
    <string name="zero">0</string>
    <string name="zero_pct">0%</string>
    <string name="label_medals_format">MEDALLAS (%1$d/5)</string>
    <string name="medal_name_1">1&#170; ec.</string>
    <string name="medal_name_streak">Racha</string>
    <string name="medal_name_modules">M&#243;dulos</string>
    <string name="medal_silver">&#129354;</string>
    <string name="btn_exit_text">&#8592; Salir</string>
    <string name="timer_default">2:00</string>
    <string name="timer_finished">0:00</string>
    <string name="x_equals">x = </string>
    <string name="answer_hint">Sigue las instrucciones</string>
    <string name="nav_inicio_short">Inicio</string>
    <string name="nav_temas_short">Temas</string>
    <string name="nav_salas_short">Salas</string>
    <string name="nav_stats_short">Stats</string>
    <string name="nav_config_short">Config</string>
    <string name="method_balanza">&#9878; Balanza &#183; Ej. 1 de 3</string>
    <string name="label_solve">Resuelve:</string>
    <string name="balance_instruction">Aplica la misma operaci&#243;n a ambos lados:</string>
    <string name="balance_status_initial">Aplica &#8722;5 a ambos lados para aislar x</string>
    <string name="ten">10</string>
    <string name="eq_bal">x + 5</string>
    <string name="label_pieces">PIEZAS</string>
    <string name="op_minus_5">&#8722;5</string>
    <string name="op_plus_5">+5</string>
    <string name="op_times_2">&#215;2</string>
    <string name="op_div_2">&#247;2</string>
    <string name="equal_sign">=</string>
    <string name="desc_balanza">Representaci&#243;n visual de una balanza en equilibrio</string>
    <string name="desc_trash">Eliminar pieza</string>
    <string name="exercise_classic_title">Ejercicio 2/3</string>
    <string name="op_minus">&#8722;</string>
    <string name="op_divide">&#247;</string>
    <string name="val_3x">3x</string>
    <string name="val_x">x</string>
    <string name="val_plus_5">+5</string>
    <string name="val_minus_5">&#8722;5</string>
    <string name="val_20">20</string>
    <string name="val_15">15</string>
    <string name="val_3">3</string>
    <string name="method_tiles">&#128306; Algebra Tiles &#183; Ej. 3/3</string>
    <string name="tiles_instruction">Haz clic o arrastra un tile para moverlo al lado contrario y cancelarlo:</string>
    <string name="label_left">IZQUIERDO</string>
    <string name="label_right">DERECHO</string>
    <string name="tiles_status_initial">Haz clic en un +1 del lado izquierdo para moverlo al lado derecho.</string>
    <string name="title_module_completed">M&#243;dulo completado &#127891;</string>
    <string name="msg_module_finished">&#161;M&#243;dulo 1 finalizado!</string>
    <string name="stat_correct">Correctos</string>
    <string name="stat_incorrect">Incorrectos</string>
    <string name="pts_earned_format">+%1$d puntos</string>
    <string name="summary_methods">Temas: Balanza &#183; Cl&#225;sico &#183; Algebra Tiles</string>
    <string name="btn_back_to_topics">Ir a Temas</string>
    <string name="fin_grad_icon">&#127891;</string>
    <string name="pts_earned_placeholder">+0 puntos</string>
    <string name="desc_back_to_topics">Finalizar y volver a la lista de temas</string>
    <string name="msg_module_completed">¡Has terminado el Módulo %1$d!</string>
    <string name="title_progress_by_module">PROGRESO POR M&#211;DULO</string>
    <string name="status_locked">Bloqueado</string>
    <string name="percent_format">%1$d%%</string>
    <string name="module_unlock_requirement">Completa el m&#243;dulo anterior para desbloquear</string>
    <string name="module_locked_toast_format">&#128274; %1$s bloqueado</string>
    <string name="module_completed_chip">&#9989;</string>
    <string name="module_subtitle_completed_format">%1$s &#183; Completado</string>
    <string name="tab_info">Informaci&#243;n</string>
    <string name="tab_examples">Ejemplos</string>
    <string name="btn_examples_next">Ejemplos &#8594;</string>
    <string name="btn_exercises_next">Ejercicios &#8594;</string>
    <string name="page_indicator_format">%1$d / 2</string>
    <string name="page_indicator_default">1 de 2</string>
    <string name="drop_hint_release">Suelta aqu&#237; &#8595;</string>
    <string name="drop_hint_touch">o toca un bot&#243;n</string>
    <string name="toast_enter_answer">Ingresa una respuesta</string>
    <string name="dialog_correct_points_format">&#161;Bien hecho!\n+%1$d puntos</string>
    <string name="dialog_correct_hint_extra">\n\nUsaste pista. &#161;Intenta sin pista la pr&#243;xima para m&#225;s puntos!</string>
    <string name="dialog_incorrect_title">&#129300; Intenta de nuevo</string>
    <string name="dialog_incorrect_message">Revisa tus pasos para encontrar el error.</string>
    <string name="btn_finish">Finalizar</string>
    <string name="btn_next_arrow">Siguiente &#8594;</string>
    <string name="btn_retry">Reintentar</string>
    <string name="btn_exit_text_plain">Salir</string>
    <string name="dialog_timeup_message">No te rindas, &#161;vuelve a intentarlo!</string>
    <string name="toolbar_module_exercise_format">M&#243;dulo %1$d &#183; Ej. %2$d</string>
    <string name="input_error_incorrect">Incorrecto</string>
    <string name="hint_tile_suggestion_format">\n\n&#128161; Sugerencia: Intenta aplicar %1$s</string>
    <string name="example_label_a">Ejemplo A</string>
    <string name="example_label_b">Ejemplo B</string>
    <string name="example_label_c">Ejemplo C</string>
    <string name="log_tag_error">ExerciseActivity</string>
    <string name="log_missing_steps_container">No se encontr&#243; el contenedor ll_solution_steps</string>
    <string name="shortcut_icon_placeholder">1</string>
    <string name="shortcut_module_placeholder">M&#243;dulo 1</string>
    <string name="module_card_btn_info">&#128214; Info</string>
    <string name="module_card_btn_examples">&#128161; Ejemplos</string>
    <string name="module_card_btn_exercises">&#9654; Ejercicios</string>
    <string name="module_card_locked_with_icon">&#128274; Bloqueado</string>
    <string name="tiles_apply">APLICAR</string>
    <string name="tiles_here">aqu&#237;</string>
    <string name="classic_steps_title">Soluci&#243;n paso a paso:</string>
    <string name="example_step_placeholder">Paso del ejemplo</string>
    <string name="module_title_placeholder">M&#243;dulo 1</string>
    <string name="btn_back_arrow">&#8592; Volver</string>
    <string name="symbol_check_mark">&#10003;</string>
    <string name="default_username">Usuario</string>
    <string name="status_isolate_x_balance">A&#237;sla x para equilibrar la balanza</string>
    <string name="status_drag_operation_center">Arrastra una operaci&#243;n al centro para aplicarla en ambos lados.</string>
    <string name="status_solve_equation_step_by_step">Resuelve la ecuaci&#243;n paso a paso</string>
    <string name="status_x_isolated_success">&#10003; &#161;Excelente! x est&#225; aislada.</string>
    <string name="status_balance_touched_ground">&#9888;&#65039; La balanza ha tocado suelo</string>
    <string name="status_seek_balance">Busca el equilibrio de la ecuaci&#243;n</string>
    <string name="status_divide_by_zero_error">No se puede dividir entre 0</string>
    <string name="status_strategic_move">&#10003; Movimiento estrat&#233;gico. &#161;Sigue as&#237;!</string>
    <string name="status_balance_changed_hint">La balanza cambi&#243;, pero busca aislar x.</string>
</resources>